# RegularExpressionRecognizer

./: CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  NFAutomata.cpp  NFAutomata.h  README.md  Regular.cpp  Regular.h  RegularTree.cpp  RegularTree.h  demo.cpp  main.cpp
DFAutomata/: DFAutomata.cpp  DFAutomata.h
NFAutomata/: NFAutomata.cpp  NFAutomata.h
Regular/: Regular.cpp  Regular.h
